# iclinic-main-service

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy-main-service.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
docs/: AGENTIC.md  API.md  README.md
src/: main.py
src/api/middleware/: auth.py  cors.py  logging.py
src/api/rest/: app.py  dependencies.py
src/api/rest/routes/: appointment_types.py  appointments.py  available_slots.py  health.py  twilio_verify.py  voice.py
src/config/: hashing.py  jwt_handler.py  settings.py
src/control/voice_assistance/: config.py  graph.py  models.py  routes.py  session_store.py  state.py  utils.py
src/control/voice_assistance/nodes/: book_appointment_node.py  booking_confirmation_node.py  booking_slot_selection_node.py  call_init_node.py  cancel_appointment_node.py  cancel_confirmation_node.py  cancellation_slot_selection_node.py  clarify_node.py  doctor_selection_node.py  general_assistance_node.py  identity_confirmation_node.py  pre_confirmation_node.py  query_intent_node.py  stt_node.py  (+2 more)
src/core/exceptions/: base.py
src/core/services/: appointment_types.py  appointments.py  available_slots.py  twilio_verify.py
src/data/clients/: auth_client.py  postgres_client.py
src/data/repositories/: appointment_types.py  appointments.py  available_slots.py  common_commit.py  generic_crud.py
src/data/seeds/: seed_available_slots.py
src/schemas/: appointment_types.py  appointments.py  available_slots.py  twilio_verify.py
src/utils/: to_uuid.py
(+25 files in other folders)
